@@ -1,2 +1,2 @@
-"title","author","price","isbn","binding"
-"Cruel as the Grave","Penman, Sharon",15F,0140270760,"square"
+"title","author","price","isbn","binding","cover"
+"Cruel as the Grave","Penman, Sharon",15F,0140270760,"square",collectorz/image.png
